Your descriptive commit message

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+ <p>Tekst test opp i repo</p>
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="/favicon.ico" />
